--- a/prac/index.html
+++ b/prac/index.html
@@ -7,7 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    Hi
+    <h1>Home Page</h1>
+    <button id="button">Click Me</button>
 </body>
 </html>
 <script src="index.js"></script>
