--- a/prac/index.html
+++ b/prac/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1>Home Page</h1>
     <button id="button">Click Me</button>
+    <div class="container"></div>
 </body>
 </html>
 <script src="index.js"></script>
