--- a/prac/index.html
+++ b/prac/index.html
@@ -4,12 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="index.css">
     <title>Document</title>
 </head>
 <body>
     <h1>Home Page</h1>
     <button id="button">Click Me</button>
-    <div class="container"></div>
+    <div class="container">
+        <div class="inner">Inner</div>
+    
+    </div>
+    
 </body>
 </html>
 <script src="index.js"></script>
