--- a/prac/index.html
+++ b/prac/index.html
@@ -1,20 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="index.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="index.css" />
     <title>Document</title>
-</head>
-<body>
-    <h1>Home Page</h1>
-    <button id="button">Click Me</button>
-    <div class="container">
-        <div class="inner">Inner</div>
-    
-    </div>
-    
-</body>
+  </head>
+  <body>
+    <button class="btn-login">Login</button>
 </html>
 <script src="index.js"></script>
