--- a/prac/index.html
+++ b/prac/index.html
@@ -9,5 +9,24 @@
   </head>
   <body>
     <button class="btn-login">Login</button>
+    <div class="overlay">
+      Overlay
+    </div>
+    <div class="login-form">
+      <span>&times;</span>
+      <form >
+        <div>
+          <label >Username</label>
+          <input type="text" placeholder="Enter Email or Phone Number"/>
+        </div>
+        <div>
+          <label >Password</label>
+          <input type="password" placeholder="Enter password"/>
+        </div>
+        <div>
+          <input type="submit" value="Submit"/>
+        </div>
+      </form>
+    </div>
 </html>
 <script src="index.js"></script>
