--- a/prac/index.html
+++ b/prac/index.html
@@ -13,7 +13,7 @@
       Overlay
     </div>
     <div class="login-form">
-      <span>&times;</span>
+      <span class="hideform">&times;</span>
       <form >
         <div>
           <label >Username</label>
