--- a/LangTranslator/index.html
+++ b/LangTranslator/index.html
@@ -11,31 +11,30 @@
     <div id="google_element"></div>
 
     <h1>
-      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perferendis,
-      autem beatae?
+      Education in India is primarily managed by state-run public education
+      system, which fall under the command of the government at three levels:
+      central, state and local.
     </h1>
     <h3>
-      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Delectus totam
-      amet unde asperiores reprehenderit et nobis repudiandae id cupiditate
-      distinctio.
+      Education in India faces many challenges and opportunities, such as
+      improving access and quality, reducing disparities and dropouts,
+      increasing enrolment and completion rates, enhancing learning outcomes and
+      employability, strengthening governance and accountability, promoting
+      innovation and technology, and addressing the impact of COVID-19 pandemic.
     </h3>
     <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta maxime
-      fugiat id laborum, atque fugit quas possimus quia? Explicabo id
-      voluptates, molestias sint magni beatae. Fugit nemo tempora dolor,
-      voluptatem iure aliquam, maxime non illo enim, iste quam animi explicabo.
+      Education in India faces many challenges and opportunities, such as
+      improving access and quality, reducing disparities and dropouts,
+      increasing enrolment and completion rates, enhancing learning outcomes and
+      employability, strengthening governance and accountability, promoting
+      innovation and technology, and addressing the impact of COVID-19 pandemic.
     </p>
     <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta maxime
-      fugiat id laborum, atque fugit quas possimus quia? Explicabo id
-      voluptates, molestias sint magni beatae. Fugit nemo tempora dolor,
-      voluptatem iure aliquam, maxime non illo enim, iste quam animi explicabo.
-    </p>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta maxime
-      fugiat id laborum, atque fugit quas possimus quia? Explicabo id
-      voluptates, molestias sint magni beatae. Fugit nemo tempora dolor,
-      voluptatem iure aliquam, maxime non illo enim, iste quam animi explicabo.
+      Education in India faces many challenges and opportunities, such as
+      improving access and quality, reducing disparities and dropouts,
+      increasing enrolment and completion rates, enhancing learning outcomes and
+      employability, strengthening governance and accountability, promoting
+      innovation and technology, and addressing the impact of COVID-19 pandemic.
     </p>
   </body>
 </html>
